0.2.0
Save spell check dialog pos/size.
Updated help.
Done spellcheck.
Removed system and popen calls.
Added runExternalProc class.

0.1.0
Done gzip page on save ( default don't zip ).
Added wrap lines to prefs ( default wrap ).
Added highlight current line ( for no hilite set alpha to 0 in prefs ).
Removed unneeded man page.
Fixed cant save page at location ( brings up save dialog ).
Done auto unzip manpages.
Added template.
Removed text-size opt to prefs.
Removed use-underline opt to prefs.
Added font config to prefs ( only affects font/size in main gui, NOT in manpage ).
Added teminal command to prefs ( default "xterm -hold -e " ).
Done prefs.
Done opening manpage starting with ".so ".
Removed print menu.
Mark document dirty=false after save/saveas.
Code clean.
Fixed virgin save.
Fixed closing tab or page if modified.
Fixed tab text case.
Fixed adding new section.
Added 'Auto' to open system manpage.
Cli option -p overides filepath on commandline.
Added cli option -p to show open
Fixed desktop file.
Done open system manpage dialog on startup.
Done edit menu.
Added help.
Now usable.

0.0.8
Fixed setting icon/text when using -u option.
Fix for qt5.
Added show italic as underline option.
Added text size option.
Added cli args/config file (~/.config/manpageeditqt.rc)
Switch tab to newly created tab.
New section inserts tab after current tab.
Added context menu to tab to change section name and/or section type.
Added 'New'.
Correctly set page properties on startup.
Updated app icon.
Fixed exporting in qt5.
User editing.
Better import/export.
Done 'About' boxes.
Added resources to install.

0.0.7
Done live search.
Redone preview/export/
Redone import.

0.0.5
Done .TP,.IP,.EX,.EE,.SM ...
Fixed getting properties from manpage.
Open now closes current doc 1st.
Done manpage properties.
Added build for qt5, (use USEQTVERSION=5 ./autogen.sh --prefix=/usr ).
Done preview ( uses xterm ).
Added clear.
Added italic/undeline.
Added bold.
Code clean.
Done close tab.