@@ -1,4 +1,7 @@
 0.2.0
+Code clean.
+Stopped spell check dialog flickering.
+Save prefs dialog pos/size.
 Save spell check dialog pos/size.
 Updated help.
 Done spellcheck.
